--- a/src/app/hub/content-workspace/content-workspace.component.html
+++ b/src/app/hub/content-workspace/content-workspace.component.html
@@ -492,7 +492,8 @@
                 <i class="fas fa-cog"></i>
               </button>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="settingsDD">
-                <a class="dropdown-item" href="javascript:void(0)">Edit</a>
+                <a class="dropdown-item" href="javascript:void(0)" data-toggle="modal"
+                  data-target="#editWorkspaceModal">Edit</a>
                 <a class="dropdown-item" href="javascript:void(0)">Duplicate</a>
                 <a class="dropdown-item" href="javascript:void(0)">Lock</a>
                 <a class="dropdown-item" href="javascript:void(0)">Hide from Experience App Link</a>
