confirm dialog module on delete catg

--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -36,7 +36,7 @@
                   <div class="dropdown-menu" aria-labelledby="catEllipsis">
                     <a class="dropdown-item" href="javascript:void(0);" data-toggle="modal"
                       data-target="#editCategoryModal"><i class="fas fa-edit mr-1"></i>Edit</a>
-                    <a class="dropdown-item" href="javascript:void(0);"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
+                    <a class="dropdown-item" href="javascript:void(0);" (click)="delCatg({})"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
                   </div>
                 </div>
               </div>
