change classes name in error pages

--- a/src/app/errors/404/error-404.component.scss
+++ b/src/app/errors/404/error-404.component.scss
@@ -1,18 +1,18 @@
-.error-404 {
+.err-404 {
   margin-top: 10vh;
   .img {
     img {
       width: 300px;
     }
   }
-  .error-code {
+  .err-code {
     font-size: 112px;
     text-align: center;
     line-height: 1;
     margin-bottom: 16px;
     font-weight: 600;
   }
-  .message {
+  .msg {
     font-size: 24px;
     text-align: center;
   }
