--- a/src/app/errors/500/error-500.component.html
+++ b/src/app/errors/500/error-500.component.html
@@ -1,8 +1,8 @@
-<div fxLayout="column" fxLayoutAlign="center center" class="error-500">
+<div fxLayout="column" fxLayoutAlign="center center" class="err-500">
   <div class="text-center align-self-center" fxLayout="column" fxLayoutAlign="center center">
     <div class="img"><img src="assets/images/err.png"></div>
-    <div class="error-code mt-5">5 <i class="far fa-frown" aria-hidden="true"></i> 0</div>
-    <div class="message mt-3">Sorry but we could not find the page you are looking for</div>
+    <div class="err-code mt-5">5 <i class="far fa-frown" aria-hidden="true"></i> 0</div>
+    <div class="msg mt-3">Sorry but we could not find the page you are looking for</div>
     <a class="back-link mt-3" [routerLink]="'/'">Go back to Home</a>
   </div>
 </div>
