division, user pages done

--- a/src/app/setting/division/division.component.html
+++ b/src/app/setting/division/division.component.html
@@ -1,1 +1,106 @@
-<p>division works!</p>
+<div class="main main-hub p-3">
+  <h3 class="mb-4 clearfix heading">
+    <div class="float-left">
+      <div class="dropdown">
+        <div class="curs-ptr dropdown-toggle" id="divisionsDD" data-toggle="dropdown" aria-haspopup="true"
+          aria-expanded="false">
+          Hi-Force
+        </div>
+        <div class="dropdown-menu mt-5" aria-labelledby="divisionsDD">
+          <a class="dropdown-item" href="#">H.E.S Sales Limited</a>
+          <a class="dropdown-item" href="#">Hi-Force</a>
+          <a class="dropdown-item" href="#">ABC</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#addDivisionModal">New Division</a>
+        </div>
+      </div>
+    </div>
+    <div class="float-right">
+      <div class="dropdown">
+        <button class="btn btn-light dropdown-toggle" type="button" id="cogDD" data-toggle="dropdown"
+          aria-haspopup="true" aria-expanded="false">
+          <i class="fa fa-cog"></i>
+        </button>
+        <div class="dropdown-menu" aria-labelledby="cogDD">
+          <a class="dropdown-item" href="#" data-toggle="modal" data-target="#editDivisionModal">Edit</a>
+        </div>
+      </div>
+    </div>
+  </h3>
+  <div class="mt-2 row">
+    <div class="col-md-4">
+      <div class="card">
+        <div class="card-header">
+          Assigned Groups
+          <div class="float-right">
+            <i class="fas fa-edit curs-ptr" data-toggle="modal" data-target="#updateGroupsModal"></i>
+          </div>
+        </div>
+        <div class="card-body">
+          <div class="assigned-group my-1">
+            All Users
+            <div class="float-right">
+              <span class="badge badge-primary mr-2">359</span>
+              <i class="fas fa-user-friends"></i>
+            </div>
+          </div>
+          <div class="assigned-group my-1">
+            All Users
+            <div class="float-right">
+              <span class="badge badge-primary mr-2">359</span>
+              <i class="fas fa-user-friends"></i>
+            </div>
+          </div>
+          <div class="assigned-group my-1">
+            All Users
+            <div class="float-right">
+              <span class="badge badge-primary mr-2">359</span>
+              <i class="fas fa-user-friends"></i>
+            </div>
+          </div>
+          <div class="assigned-group my-1">
+            All Users
+            <div class="float-right">
+              <span class="badge badge-primary mr-2">359</span>
+              <i class="fas fa-user-friends"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">
+          Promoted Members
+          <div class="float-right">
+            <div class="btn btn-primary" data-toggle="modal" data-target="#promoteMemberModal">Promote a Member</div>
+          </div>
+        </div>
+        <div class="card-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">User</th>
+                <th scope="col">Content</th>
+                <th scope="col">Collaboration</th>
+                <th scope="col">User Management</th>
+                <th scope="col">Reporting</th>
+                <th scope="col">Options</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Test</td>
+                <td>Test</td>
+                <td>Test</td>
+                <td>Test</td>
+                <td>Test</td>
+                <td>Test</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
