--- a/src/app/setting/profile/profile.component.html
+++ b/src/app/setting/profile/profile.component.html
@@ -1,1 +1,53 @@
-<p>profile works!</p>
+<div class="main main-hub p-3">
+  <h3 class="mb-4 clearfix heading">
+    Profile
+  </h3>
+  <div class="mt-2">
+    <div class="main-tab-nav row">
+      <div class="col-md-7">
+        <div class="card">
+          <div class="card-header">
+            My User Profile
+            <div class="float-right">
+              <i class="fas fa-edit" data-toggle="modal" data-target="#editProfileModal"></i>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="row px-4 my-1">
+              <div class="col font-weight-bold">Name</div>
+              <div class="col">Your Name</div>
+            </div>
+            <div class="row px-4 my-1">
+              <div class="col font-weight-bold">Email</div>
+              <div class="col">Your Email</div>
+            </div>
+            <div class="row px-4 my-1">
+              <div class="col font-weight-bold">Language</div>
+              <div class="col">Your Language</div>
+            </div>
+            <div class="row px-4 my-1">
+              <div class="col font-weight-bold">Time Zone</div>
+              <div class="col">Your Time Zone</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <div class="card">
+          <div class="card-header">
+            Password
+            <div class="float-right">
+              <i class="fas fa-edit" data-toggle="modal" data-target="#editPasswordModal"></i>
+            </div>
+          </div>
+          <div class="card-body">
+            <div class="row px-4 my-1">
+              <div class="col">Password</div>
+              <div class="col">********</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
