--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,6 +84,10 @@ body {
 }
 
 // material
+.mat-checkbox-layout {
+  white-space: normal !important;
+}
+
 .mat-tab-label-active {
   opacity: 1 !important;
 }
