--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -14,8 +14,8 @@
             Categories
             <div class="float-right btn p-0" (click)="toggleCatgInp()"><i class="fa fa-plus-circle text-primary"></i>
             </div>
-            <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 flex" [floatLabel]="'never'"
-              *ngIf="showCatgIn">
+            <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 flex bg-white"
+              [floatLabel]="'never'" *ngIf="showCatgIn">
               <input matInput placeholder="Add Category" class="ml-0">
               <div matSuffix class="curs-ptr">
                 <i class="fas fa-times mr-2" (click)="toggleCatgInp()"></i>
@@ -36,12 +36,13 @@
                   <div class="dropdown-menu" aria-labelledby="catEllipsis">
                     <a class="dropdown-item" href="javascript:void(0);" data-toggle="modal"
                       data-target="#editCategoryModal"><i class="fas fa-edit mr-1"></i>Edit</a>
-                    <a class="dropdown-item" href="javascript:void(0);" (click)="delCatg({})"><i class="fas fa-trash-alt mr-1"></i>Delete</a>
+                    <a class="dropdown-item" href="javascript:void(0);" (click)="delCatg({})"><i
+                        class="fas fa-trash-alt mr-1"></i>Delete</a>
                   </div>
                 </div>
               </div>
-              <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 flex" [floatLabel]="'never'"
-                style="display: none;">
+              <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 flex bg-white"
+                [floatLabel]="'never'" style="display: none;">
                 <input matInput placeholder="Add Category" class="ml-0">
                 <div matSuffix class="curs-ptr">
                   <i class="fas fa-times mr-2" (click)="closeCatListIP($event)"></i>
