few styling changes

--- a/src/app/setting/division/division.component.html
+++ b/src/app/setting/division/division.component.html
@@ -6,7 +6,7 @@
           aria-expanded="false">
           Hi-Force
         </div>
-        <div class="dropdown-menu mt-5" aria-labelledby="divisionsDD">
+        <div class="dropdown-menu" aria-labelledby="divisionsDD">
           <a class="dropdown-item" href="#">H.E.S Sales Limited</a>
           <a class="dropdown-item" href="#">Hi-Force</a>
           <a class="dropdown-item" href="#">ABC</a>
