--- a/src/app/setting/profile/profile.component.html
+++ b/src/app/setting/profile/profile.component.html
@@ -9,7 +9,7 @@
           <div class="card-header">
             My User Profile
             <div class="float-right">
-              <i class="fas fa-edit" data-toggle="modal" data-target="#editProfileModal"></i>
+              <i class="fas fa-edit curs-ptr" data-toggle="modal" data-target="#editProfileModal"></i>
             </div>
           </div>
           <div class="card-body">
@@ -37,7 +37,7 @@
           <div class="card-header">
             Password
             <div class="float-right">
-              <i class="fas fa-edit" data-toggle="modal" data-target="#editPasswordModal"></i>
+              <i class="fas fa-edit curs-ptr" data-toggle="modal" data-target="#editPasswordModal"></i>
             </div>
           </div>
           <div class="card-body">
