--- a/src/app/setting/division/division.component.html
+++ b/src/app/setting/division/division.component.html
@@ -4,12 +4,10 @@
       <div class="dropdown">
         <div class="curs-ptr dropdown-toggle" id="divisionsDD" data-toggle="dropdown" aria-haspopup="true"
           aria-expanded="false">
-          Hi-Force
+          {{hubDispName}}
         </div>
         <div class="dropdown-menu" aria-labelledby="divisionsDD">
-          <a class="dropdown-item" href="#">H.E.S Sales Limited</a>
-          <a class="dropdown-item" href="#">Hi-Force</a>
-          <a class="dropdown-item" href="#">ABC</a>
+          <a class="dropdown-item" href="#" *ngFor="let hub of hubs" [attr.id]="hub.id">{{hub.name}}</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#" data-toggle="modal" data-target="#addDivisionModal">New Division</a>
         </div>
