hub list api, ngbModal used

--- a/src/app/setting/profile/profile.component.html
+++ b/src/app/setting/profile/profile.component.html
@@ -9,7 +9,7 @@
           <div class="card-header">
             My User Profile
             <div class="float-right">
-              <i class="fas fa-edit curs-ptr" data-toggle="modal" data-target="#editProfileModal"></i>
+              <i class="fas fa-edit curs-ptr" (click)="openModal(editProfile)"></i>
             </div>
           </div>
           <div class="card-body">
@@ -37,7 +37,7 @@
           <div class="card-header">
             Password
             <div class="float-right">
-              <i class="fas fa-edit curs-ptr" data-toggle="modal" data-target="#editPasswordModal"></i>
+              <i class="fas fa-edit curs-ptr" (click)="openModal(editPassword)"></i>
             </div>
           </div>
           <div class="card-body">
@@ -51,3 +51,65 @@
     </div>
   </div>
 </div>
+
+<!-- edit profile modal -->
+<ng-template #editProfile let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Edit Profile Details</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>First Name</mat-label>
+      <input matInput type="text" placeholder="First Name">
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Last Name</mat-label>
+      <input matInput type="text" placeholder="Last Name">
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Email</mat-label>
+      <input matInput type="text" placeholder="Email">
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Language</mat-label>
+      <mat-select>
+        <mat-option value="abc">Abc</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Time Zone</mat-label>
+      <mat-select>
+        <mat-option value="abc">abc</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" ngbAutofocus class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
+
+<!-- edit profile modal -->
+<ng-template #editPassword let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Change Password</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Password</mat-label>
+      <input matInput type="text" placeholder="Password">
+    </mat-form-field>
+    <mat-form-field appearance="outline" class="w-100">
+      <mat-label>Confirm Password</mat-label>
+      <input matInput type="text" placeholder="Confirm Password">
+    </mat-form-field>
+  </div>
+  <div class="modal-footer">
+    <button type="button" ngbAutofocus class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+  </div>
+</ng-template>
