--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -12,7 +12,7 @@
 </mat-tab-group>
 
 <!-- Edit Profile Modal -->
-<div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="editProfileModalLabel"
+<!-- <div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="editProfileModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -54,10 +54,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Edit Password Modal -->
-<div class="modal fade" id="editPasswordModal" tabindex="-1" role="dialog" aria-labelledby="editPasswordModalLabel"
+<!-- <div class="modal fade" id="editPasswordModal" tabindex="-1" role="dialog" aria-labelledby="editPasswordModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -83,10 +83,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Add Division Modal -->
-<div class="modal fade" id="addDivisionModal" tabindex="-1" role="dialog" aria-labelledby="addDivisionModalLabel"
+<!-- <div class="modal fade" id="addDivisionModal" tabindex="-1" role="dialog" aria-labelledby="addDivisionModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -117,10 +117,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Edit Division Modal -->
-<div class="modal fade" id="editDivisionModal" tabindex="-1" role="dialog" aria-labelledby="editDivisionModalLabel"
+<!-- <div class="modal fade" id="editDivisionModal" tabindex="-1" role="dialog" aria-labelledby="editDivisionModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -151,10 +151,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Update Groups Modal -->
-<div class="modal fade" id="updateGroupsModal" tabindex="-1" role="dialog" aria-labelledby="updateGroupsModalLabel"
+<!-- <div class="modal fade" id="updateGroupsModal" tabindex="-1" role="dialog" aria-labelledby="updateGroupsModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -178,10 +178,10 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Promote Member Modal -->
-<div class="modal fade" id="promoteMemberModal" tabindex="-1" role="dialog" aria-labelledby="promoteMemberModalLabel"
+<!-- <div class="modal fade" id="promoteMemberModal" tabindex="-1" role="dialog" aria-labelledby="promoteMemberModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -227,4 +227,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
